<resources>
    <string name="app_name">Project1</string>
    <string name="numberphone">Номер телефона</string>
    <string name="registration">Регистрация</string>
    <string name="next">Далее</string>
    <string name="profil">Профиль</string>
    <string name="end">Завершить</string>
    <string name="namePerson">Имя Фамилия</string>
    <string name="dateBirth">Дата рождения</string>
    <string name="passport_number">NRC/ Номер  паспорта</string>
    <string name="address">Адрес</string>
    <string name="verification_msg">Данный переключатель моделирует прохождение идентификации.  Включив его, вы проходите KUC и идентификацию в системе. Выключив, вы остаетесь не идентифицированы.</string>
    <string name="verification">Верификация</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="save">Сохранить</string>
    <string name="setImgFromGallary">Загрузить из галереи</string>
    <string name="enterphone">Введите свой номер телефона</string>
    <string name="get_sms">Get SMS</string>
    <string name="enter_pin_sms">Введите полученный пароль из SMS</string>
    <string name="sign_in">Войти</string>
    <string name="secondname2">Фамилия</string>
    <string name="name2">*Имя</string>
    <string name="entername">Введите свои имя и фамилию</string>
    <string name="mwallet">mWallet</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="balance">100.00</string>
    <string name="eur">EUR</string>
    <string name="top_up">Пополнить</string>
    <string name="transfer">Переводы</string>
    <string name="withdrow">Вывод</string>
    <string name="outstanding_payments">Выставленные счета</string>
    <string name="gifts">Подарки</string>
    <string name="products_utilites">Продукты и услуги</string>
    <string name="step2">Шаг 2 из 4</string>
    <string name="step1">Шаг 1 из 4</string>
    <string name="step3">Шаг 3 из 4</string>
    <string name="step4">Шаг 4 из 4</string>
    <string name="enter_pin">Введите PIN-код</string>
    <string name="repeat_pin">Подтвердите свой \nPIN-код</string>
    <string name="identification">Идентифицирован</string>
    <string name="notsmstext">Я не получил OTP код</string>
    <string name="touch_id">Touch ID</string>
    <string name="touch_id_on">Включите Touch ID для доступа</string>
    <string name="permit">Разрешить</string>
    <string name="not_now">Не сейчас</string>
    <string name="choose_document">Выбрать документ</string>
    <string name="kyc_msg"><![CDATA[Загрузите изображения документа, удостоверяющего личность, для проверки KYC. Применяются T&C.]]></string>
    <string name="passport">Паспорт</string>
    <string name="status">Статус</string>
    <string name="not_identyfy">Не идентифицирован</string>
    <string name="add_passport_page">Загрузите из галереи фото разворота Вашего паспорта</string>
    <string name="details_op"><u>Подробности</u></string>
    <string name="no_details_op"><u>Свернуть</u></string>
    <string-array name="Documents">
        <item>Водительское удостоверение</item>
        <item>Паспорт</item>
    </string-array>
    <string name="share_text">Попробуй новые платежные функции...</string>
    <string name="refbutton_text">Поделиться возможностями приложения mWallet с друзьями</string>
    <string name="invite_text">Пригласить друга</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feedback_theme_message">Тема сообщения</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_message">Ваше сообщение</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="faq">FAQ</string>
    <string name="often_question">Часто задаваемые вопросы</string>
    <string name="enter_message">Напишите текст...</string>
    <string name="hello">Hello</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="title_activity_partners">PartnersActivity</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="title_activity_new_card">NewCardActivity</string>
    <string name="Search">Поиск</string>
    <string name="benzine">Топливо</string>
    <string name="coffee">Кофе</string>
    <string name="flowers_sweet">Цветы и сладости</string>
    <string name="movie">Кино</string>
    <string name="entertainment">Отдых и развлечения</string>
    <string name="restaurant">Рестораны</string>
    <string name="toys">Игрушки</string>
    <string name="sertificate_100">Сертификат на топливо 100</string>
    <string name="sertificate_500">Сертификат на топливо 500</string>
    <string name="sertificate_250">Сертификат на топливо 250</string>
    <string name="_100">100</string>
    <string name="description_gift">Что подарить водителю? Конечно же сертификат на топливо! С помощью сертификата можно приобреси любое топливо сети АЗК</string>
    <string name="validity">Срок действия:</string>
    <string name="days">дней</string>
    <string name="validity_txt">Действует до:</string>
    <string name="receiver_name">Имя получателя</string>
    <string name="wishes">Пожелания</string>
    <string name="agree">Я согласен с </string>
    <string name="give">Подарить</string>
    <string name="title_activity_refill">RefillActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="rules"><u>Правилами</u></string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="conditions_of_use">Условия использования:</string>
    <string name="rules_text">"Покупку по сертификату можно совершить только за одно посещение. \n\n  Если сумма покупки меньше суммы, указанной на сертификате, разница между номиналом сертификата и суммой покупки не возвращается. \n\n  Если сумма покупки превышает номинал, указанный в сертификате, покупатель может оплатить разницу между этой суммой и номиналом сертификата. При осуществлении покупки по подарочному сертификату скидки по дисконтным картам постоянных покупателей предоставляются в рамках действующей дисконтной программы. Товары, приобретенные по подарочным сертификатам могут быть обменены на другой товар. \n\n   При возврате товара, приобретенного по подарочному сертификату, выдается новый подарочный сертификат на у же сумму. Подарочный сертификат не подлежит обмену на денежный эквивалент."</string>
    <string name="map">Карта</string>
    <string name="friends">Друзья</string>
    <string name="home">Главная</string>
    <string name="history">История</string>
    <string name="cards">Карты</string>
    <string name="chat">Чат</string>
    <string name="scan_pay"><![CDATA[Scan & Pay]]></string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="default_notification_channel_id">2345</string>
    <string name="msg_subscribe_failed">msg_subscribe_failed</string>
    <string name="msg_subscribed">msg_subscribed</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="language_change">Языки</string>
    <string name="removepin">Сбросить PIN</string>
    <string name="exit_settings">Выход</string>
    <string name="fingerprint_set">Сканер отпечатка пальца</string>
    <string name="low_status">Ваш статус недостаточен!</string>
    <string name="image_not_loaded">шибка.изображение не загружено</string>
    <string name="message_not_received">Ошибка. Сообщение не отправлено</string>
    <string name="enter_message_chat">Введите сообщение</string>
    <string name="image_not_received">Ошибка. Изображение не отправлено</string>
    <string name="image_received">Изображение отправлено</string>
    <string name="voice_message_received">Голосовое сообщение отправлено</string>
    <string name="voice_message_not_received">Ошибка. Сообщение не отправлено</string>
    <string name="choose_sending_method">Выберите способ отправки :</string>
    <string name="error_autentification">Ошибка аутентификации:</string>
    <string name="sucess_autentification">Аутентификация прошла успешно</string>
    <string name="need_autentification">Для продолжения требуется аутентификация</string>
    <string name="description_auth">Это приложение использует биометрическую аутентификацию для защиты ваших данных</string>
    <string name="cancel_auth">Отмена</string>
    <string name="screen_protection_off">Защита экрана не включена в настройках</string>
    <string name="auth_allow_off">Разрешение аутентификации по отпечатку пальца не включено</string>
    <string name="expand">Развернуть...</string>
    <string name="roll_up">Свернуть</string>
    <string name="low_balance">Недостаточно баллов!</string>
    <string name="abonent_payment">Оплата абонентской платы</string>
    <string name="reward_1st_lvl">Вознаграждение за пополнение баланса партнером 1 уровня</string>
    <string name="reward_2_lvl">Вознаграждение за пополнение баланса партнером 2 уровня</string>
    <string name="reward_3_lvl">Вознаграждение за пополнение баланса партнером 3 уровня</string>
    <string name="success">Операция прошла успешно!</string>
    <string name="error">Ошибка!</string>
    <string name="image_not_refreshed">ошибка! Изображение  не обновлено!</string>
    <string name="image_refreshed">изображение обновлено</string>
    <string name="name_not_fill">Поле имя пустое</string>
    <string name="surname_not_fill">Поле фамилия пустое</string>
    <string name="datebirthd_not_fill">Поле дата рождения пустое</string>
    <string name="country_not_fill">Поле страна пустое</string>
    <string name="city_not_fill">Поле город пустое</string>
    <string name="adress_not_fill">Поле адрес пустое</string>
    <string name="profile_redact_success">Профиль успешно отредактирован</string>
    <string name="profile_redact_no_success">Ошибка.Профиль не отредактирован</string>
    <string name="male_not_fill">Пол не указан</string>
    <string name="sponsor_phone_not_fill">Поле номер телефона спонсора пустое</string>
    <string name="sponsop_phone_not_found">Спонсор с таким номером не найден</string>
    <string name="conn_error">Ошибка соединения</string>
    <string name="set_email">Введите Email</string>
    <string name="send">Отправить</string>
    <string name="recipient_number">Номер телефона получателя</string>
    <string name="transfer_summ">Сумма перевода</string>
    <string name="message_for_recipient">Сообщение получателю</string>
    <string name="transfer_confirm">Перевести</string>
    <string name="feedback_text">Внести предложение</string>
    <string name="transfers">Перевод</string>
</resources>