<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".signupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:background="@drawable/rectangle_background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/enterphone"
            android:textAlignment="center"
            android:textSize="28sp"/>

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="+7"
            android:inputType="phone"
            android:textColor="@color/Gray"
            style="@style/EditText.Login"
            android:theme="@style/EditText.Login"/>

        <Button
            android:id="@+id/getsmsbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/get_sms"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/enter_pin_sms"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="numberPassword"
            android:textColor="@color/Gray"
            style="@style/EditText.Login"
            android:theme="@style/EditText.Login"/>

        <TextView
            android:id="@+id/notsmstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/notsmstext"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

    </LinearLayout>

</RelativeLayout>