<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="8dp"
    tools:context=".FeedbackActivity"
    tools:showIn="@layout/app_bar_feedback"
    android:background="@color/background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:background="@color/background"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="#989898"
                android:textSize="23sp"
                android:text="@string/feedback_text"/>

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@color/background" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/feedback_theme_message"
            android:textSize="25sp"
            android:padding="8dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"/>

            <Spinner
                android:id="@+id/message_theme"
                android:layout_weight="0.05"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:textSize="30sp"
                android:background="@drawable/feedback_layout_bg"
                android:entries="@array/message_theme"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:padding="8dp"
            android:text="@string/feedback_email"
            android:textSize="25sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/sender_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:background="@drawable/feedback_layout_bg"
            android:ems="10"
            android:hint="@string/set_email"
            android:padding="8dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:padding="8dp"
            android:text="@string/feedback_message"
            android:textSize="25sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/feedback_layout_bg"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/enter_message"
            android:padding="8dp" />
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0.05"
            android:background="@drawable/color_button"
            android:text="@string/send"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>