<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".signupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch_id"
        android:layout_above="@id/layout_pin"
        android:layout_marginBottom="32dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/layout_pin"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangle_background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/touch_id_on"
            android:textAlignment="center"
            android:textSize="25sp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fingerprint_icon"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/empty_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/permit_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/permit"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/notnow_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_now"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>