<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TransferActivity"
    tools:showIn="@layout/app_bar_transfer"
    android:background="@color/background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:background="@color/background"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="#989898"
                android:textSize="28sp"
                android:text="@string/transfers"/>

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@color/background" />

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:padding="8dp"

            android:text="@string/recipient_number"
            android:textSize="25sp"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="0.05"
            android:background="@drawable/color_button"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="+7"
                android:maxLength="12"
                android:inputType="phone"
                android:textSize="20sp"/>


            <ImageButton
                android:id="@+id/get_contacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:layout_margin="4dp"
                android:src="@drawable/ic_action_contacts"
                android:textSize="12sp"
                android:background="@color/transparent"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:padding="8dp"
            android:text="@string/transfer_summ"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="0.05"
            android:background="@drawable/color_button"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:src="@drawable/cuple"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/transfer_summ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center"
                android:inputType="phone"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:padding="8dp"
            android:text="@string/message_for_recipient"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@drawable/feedback_layout_bg"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/enter_message_chat"
            android:padding="8dp" />

        <Button
            android:id="@+id/transfer_confirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0.05"
            android:focusable="true"
            android:background="@drawable/color_button"
            android:text="@string/transfer_confirm"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>